nccltest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: torchrun-nvlink-test
---
apiVersion: v1
kind: Service
metadata:
  name: torchrun-headless
  namespace: torchrun-nvlink-test
spec:
  clusterIP: None
  selector:
    app: torchrun-nvlink-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: torchrun-nvlink-test
  namespace: torchrun-nvlink-test
spec:
  serviceName: torchrun-headless
  replicas: 3
  selector:
    matchLabels:
      app: torchrun-nvlink-test
  template:
    metadata:
      labels:
        app: torchrun-nvlink-test
    spec:
      serviceAccountName: torchrun-service-account
      restartPolicy: Always
      containers:
      - name: torchrun-container
        image: nvcr.io/nvidia/pytorch:25.11-py3
        resources:
          limits:
            nvidia.com/gpu: 4
        command:
        - /bin/bash
        - -c
        - |
          [...]
